fix(www): Constrain the `.error` page height so we don't see a scrollbar.

--- a/packages/www/styles/layout.scss
+++ b/packages/www/styles/layout.scss
@@ -22,6 +22,13 @@ html, body {
     }
 }
 
+.nav-header__tabs + main {
+    .error,
+    .loading-spinner {
+        max-height: calc(100vh - 48px);
+    }
+}
+
 li {
     margin-bottom: 4px;
 }
